<resources>
    <string name="app_name">pre_alpha</string>
    <string name="אימייל">אימייל</string>
    <string name="סיסמה">סיסמה</string>
    <string name="להרשמה">להרשמה</string>
    <string name="שם_משתמש">שם משתמש</string>
    <string name="אימות_סיסמה">אימות סיסמה</string>
    <string name="התחברות">להתחברות</string>
    <string name="כתובת_אימייל">כתובת אימייל</string>
    <string name="profile"><b>פרופיל</b></string>
    <string name="post"><b>פרסום</b></string>
    <string name="search"><b>חיפוש</b></string>
    <string name="home"><b>דף הבית</b></string>
    <string name="שכחתי_סיסמה">מה המייל איתו נרשמת לאתר? אנחנו מיד נשלח לך אימייל לחידוש הסיסמה</string>
    <string name="google_maps_API_key">AIzaSyBDaLC8N7OdcDpbmkygY9T_LEHCmSA9zMI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>