<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.pre_alpha.entry.Register">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="הרשמה"
        android:textSize="50sp"
        android:fontFamily="@font/rubik_medium"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/שם_משתמש"
        app:helperTextEnabled="true"
        app:helperText=""
        android:id="@+id/layoutUsername"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:helperTextTextColor="@color/black"
        app:boxStrokeErrorColor="#6f1d1b"
        app:boxStrokeColor="@color/brown"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/baseline_person_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/אימייל"
        app:helperTextEnabled="true"
        app:helperText=""
        android:id="@+id/layoutEmail2"
        app:helperTextTextColor="@color/black"
        app:boxStrokeErrorColor="#6f1d1b"
        app:boxStrokeColor="@color/brown"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/baseline_email_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/סיסמה"
        app:helperTextEnabled="true"
        app:helperText=""
        android:id="@+id/layoutPassword2"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/black"
        app:boxStrokeErrorColor="#6f1d1b"
        app:boxStrokeColor="@color/brown"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/baseline_lock_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/אימות_סיסמה"
        app:helperTextEnabled="true"
        app:helperText=""
        android:id="@+id/layoutConfirmPassword"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/black"
        app:boxStrokeErrorColor="#6f1d1b"
        app:boxStrokeColor="@color/brown"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/baseline_lock_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/conpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="הירשם"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="10dp"
        android:onClick="register"
        android:fontFamily="@font/rubik_medium"
        android:background="@drawable/custom_button"
        app:backgroundTint="@null"
        android:elevation="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/התחברות"
            android:textSize="30sp"
            android:textColor="@color/brown"
            android:gravity="center"
            android:onClick="loginAccount"
            android:fontFamily="@font/rubik_medium_italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="יש לך משתמש? "
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_regular"
            />
        </LinearLayout>

</LinearLayout>