<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/login"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="התחברות"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_medium"
        android:textColor="@color/black"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/אימייל"
        app:helperTextEnabled="true"
        app:helperText=""
        android:id="@+id/layoutEmail1"
        app:helperTextTextColor="@color/black"
        app:boxStrokeErrorColor="#6f1d1b"
        app:boxStrokeColor="@color/brown"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/baseline_email_24">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/black"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/סיסמה"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:helperTextEnabled="true"
        app:helperText=""
        android:id="@+id/layoutPassword1"
        app:helperTextTextColor="@color/black"
        app:boxStrokeErrorColor="#6f1d1b"
        app:boxStrokeColor="@color/brown"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/baseline_lock_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="שכחתי סיסמה"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="22sp"
        android:onClick="forgotPassword"
        android:textColor="@color/brown"
        android:fontFamily="@font/aharoniclm_boldoblique"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="התחבר"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:onClick="login"
        android:fontFamily="@font/rubik_medium"
        android:background="@drawable/custom_button"
        app:backgroundTint="@null"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/להרשמה"
            android:onClick="createAccount"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/brown"
            android:fontFamily="@font/rubik_medium_italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="עדיין לא נרשמת?"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_regular"

            />
    </LinearLayout>


</LinearLayout>